# skillhub

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: database-schema.md  imac-migration.md  product-spec.md  roadmap.md  skill-schema.md  skills-storage-architecture.md
scripts/: build_skills_registry.py  migrate_skills_architecture.py  sync_skills_all.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  database.rs  hash.rs  lib.rs  main.rs  marketplace.rs  scanner.rs  similarity.rs  skill_files.rs  sync_tools.rs
src/app/: App.tsx
src/lib/: tauri.ts
src/pages/: CategoryManagementPage.tsx  CustomSkillsPage.tsx  DashboardPage.tsx  DuplicatesPage.tsx  FavoritesDashboardPage.tsx  HealthPage.tsx  PlaceholderPage.tsx  RemotePage.tsx  RepositoryPage.tsx  SettingsPage.tsx  SkillDetailPage.tsx  SkillToolMatrixPage.tsx  SkillsPage.tsx  SyncHealthPage.tsx  ToolDirectoriesPage.tsx
src/styles/: index.css
