[package]
name = "skillhub"
version = "2.1.4"
description = "SkillHub 技能管理器"
authors = ["wdyblue"]
edition = "2021"

[lib]
name = "skillhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
opener = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
walkdir = "2"
